# holani-retro

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: deploy.yml  main.yml  rust.yml
res/: handy_libretro.info  holani_libretro.info
src/: lib.rs
