[package]
name = "holani-retro"
version = "0.6.0"
edition = "2021"

[dependencies]
holani = { git = "https://github.com/LLeny/holani.git", rev = "48df41738a8965f2fdedff3e6ad19ad2214be7d3" }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
libretro-rs = { git = "https://github.com/libretro-rs/libretro-rs.git", rev = "c7f414d19d837921b8762656e53e7f1b8f892179" }
lazy_static = "1.5.0"

[lib]
crate-type = ["cdylib"]